Add totalRatings field to movie data in index.html

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     <pre><code>{
   "title": "The Notebook",
   "rating": "7.8",
+  "totalRatings": "657K",
   "description": "A poor yet passionate young man...",
   "duration": "2h 3m",
   "genre": ["Drama", "Romance"],
